--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
         "typescript": "*"
     },
     "dependencies": {
+        "@wxn0brp/ac": "^0.0.2",
         "@wxn0brp/db": "^0.40.0",
         "@wxn0brp/falcon-frame": "^0.2.1",
-        "dotenv": "^17.2.2"
+        "busboy": "^1.6.0",
+        "dotenv": "^17.2.2",
+        "jose": "^6.1.0"
     }
 }
