feat: everything and nothing

--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -7,9 +7,10 @@
         "esModuleInterop": true,
         "skipLibCheck": true,
         "outDir": "./dist",
-        "declaration": true,
+        "sourceMap": true,
         "types": [
-            "esbuild-style-plugin"
+            "esbuild-style-plugin",
+            "@wxn0brp/flanker-ui"
         ]
     },
     "include": [
