--- a/front/package.json
+++ b/front/package.json
@@ -16,12 +16,12 @@
         "build": "node build.js"
     },
     "devDependencies": {
-        "typescript": "*"
-    },
-    "dependencies": {
-        "@wxn0brp/flanker-ui": "^0.4.0",
+        "typescript": "*",
         "esbuild": "^0.25.10",
         "esbuild-style-plugin": "^1.6.3",
         "sass": "^1.93.2"
+    },
+    "dependencies": {
+        "@wxn0brp/flanker-ui": "^0.4.0"
     }
 }
