--- a/front/package.json
+++ b/front/package.json
@@ -16,12 +16,13 @@
         "build": "node build.js"
     },
     "devDependencies": {
-        "typescript": "*",
         "esbuild": "^0.25.10",
         "esbuild-style-plugin": "^1.6.3",
-        "sass": "^1.93.2"
+        "sass": "^1.93.2",
+        "typescript": "*"
     },
     "dependencies": {
-        "@wxn0brp/flanker-ui": "^0.4.0"
+        "@wxn0brp/flanker-ui": "^0.4.0",
+        "highlight.js": "^11.11.1"
     }
 }
