--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "scripts": {
         "build": "tsc && tsc-alias",
         "start": "node dist/index.js",
+        "setup:bun": "bun install && cd front && bun install && bun run build.js && cd ..",
         "bun": "bun run src/index.ts"
     },
     "devDependencies": {
