--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -3,7 +3,8 @@ name: Build and Release Neutralino App
 on:
   push:
     paths:
-      - "./client/**"
+      - "client/**/*"
+      - ".github/workflows/client.yml"
   workflow_dispatch:
 
 jobs:
@@ -22,8 +23,8 @@ jobs:
       - name: Install Neutralino CLI
         run: npm install -g @neutralinojs/neu
 
-      - name: Verify Neutralino CLI Installation
-        run: neu --version
+      - name: Renew Neutralino App
+        run: cd client && neu update
 
       - name: Build Neutralino App
         run: cd client && neu build --release
@@ -35,6 +36,6 @@ jobs:
           name: "Latest Build"
           draft: false
           prerelease: false
-          files: ./client/dist/*.zip
+          files: ./client/dist/sol-mail-release.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
