--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 TOKEN_LIFETIME=1h
-JWT_SECRET=your-secret-here
-MAX_FILE_SIZE=2
+JWT_SECRET=your-secret-here # fill this
+MAX_FILE_SIZE=20 # 20 MB
 MAX_FILES_COUNT=10
+# PORT=19851
