chore: remove Node compatibility, full migration to Bun

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
     "name": "@wxn0brp/sol-mail",
     "version": "0.0.1",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
+    "main": "src/index.ts",
     "description": "",
     "repository": {
         "type": "git",
@@ -13,14 +12,12 @@
     "license": "MIT",
     "type": "module",
     "scripts": {
-        "build": "tsc && tsc-alias",
-        "start": "node dist/index.js",
-        "setup:bun": "bun install && cd front && bun install && bun run build.js && cd ..",
+        "start": "bun run src/index.ts",
+        "setup": "bun install && cd front && bun install && bun run build.ts && cd ..",
         "bun": "bun run src/index.ts"
     },
     "devDependencies": {
         "@types/bun": "*",
-        "tsc-alias": "*",
         "typescript": "*"
     },
     "dependencies": {
