--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,7 @@
     "license": "MIT",
     "type": "module",
     "scripts": {
-        "build": "node build.js"
+        "build": "bun run build.ts"
     },
     "devDependencies": {
         "esbuild": "^0.25.10",
