--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@wxn0brp/ac": "^0.0.2",
         "@wxn0brp/db": "^0.40.0",
         "@wxn0brp/falcon-frame": "^0.4.0",
+        "@wxn0brp/falcon-frame-lang": "github:wxn0brP/FalconFrame-lang#dist",
         "busboy": "^1.6.0",
         "dotenv": "^17.2.3",
         "jose": "^6.1.0"
