--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "type": "module",
     "scripts": {
         "start": "bun run src/index.ts",
-        "setup": "bun install && cd front && bun install && bun run build.ts && cd .."
+        "setup": "bun install && cd front && bun install && bun run build.ts && cd ..",
+        "script:add_admin": "bun run scripts/add_admin.ts",
+        "script:create_user": "bun run scripts/create_user.ts"
     },
     "devDependencies": {
         "@types/bun": "*",
