--- a/front/package.json
+++ b/front/package.json
@@ -23,7 +23,6 @@
     },
     "dependencies": {
         "@wxn0brp/flanker-ui": "^0.4.3",
-        "highlight.js": "^11.11.1",
-        "js-cookie": "^3.0.5"
+        "highlight.js": "^11.11.1"
     }
 }
