chore: update deps

--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     },
     "devDependencies": {
         "@types/bun": "*",
+        "@types/busboy": "^1.5.4",
         "typescript": "*"
     },
     "dependencies": {
-        "@types/busboy": "^1.5.4",
         "@wxn0brp/ac": "^0.0.3",
         "@wxn0brp/db": "^0.40.3",
         "@wxn0brp/falcon-frame": "^0.5.3",
-        "@wxn0brp/falcon-frame-lang": "github:wxn0brP/FalconFrame-lang#dist",
+        "@wxn0brp/falcon-frame-lang": "^0.0.3",
         "busboy": "^1.6.0",
         "dotenv": "^17.2.3",
         "jose": "^6.1.2"
